@@ -14,6 +14,7 @@ Additions
 11/02/11 r416 Added support for ircd-rizon
 
 Changes
+12/07/15 used #ifdef USE_MYSQL in modules seen/lastspoke/ircd_ports (should fix #1429)
 12/07/15 File permission detection in mysql_backup.c (should fix #1127)
 12/07/15 Added automode for logchan in bahamut
 12/07/15 Adding automode for logchan in inspircd12.c (should fix #1418)
